IQR xử lý ngoại lệ với clip(ko xóa hàng data chỉ điều chỉnh data trong hàng) / remove (xóa data)
Kết quả: clip ko làm tăng kết quả và remove thì làm data mất cân bằng.

Có 1 số hướng cải thiện về sau ...

--- a/spMiniProj_pwStrengthClassifi_Hoa/outlier.ipynb
+++ b/spMiniProj_pwStrengthClassifi_Hoa/outlier.ipynb
@@ -279,6 +279,49 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Tại sao lại là **± 1.5**? (giải thích siêu dễ hiểu)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Giả sử bạn đang làm một bài tập, và bạn được giao nhiệm vụ tìm những bạn **\"quá khác biệt\"** so với các bạn khác trong lớp. Để làm điều này, chúng ta cần một **quy tắc** để quyết định bạn nào \"lạc loài\".\n",
+    "\n",
+    "**IQR** (Interquartile Range) chính là một cách rất hay để giúp bạn phát hiện điều đó. Nhưng tại sao lại là **± 1.5** lần **IQR**?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### Giải thích cực kỳ đơn giản:\n",
+    "\n",
+    "- **IQR** là khoảng cách giữa **Q1** (điểm 25% thấp nhất) và **Q3** (điểm 75% cao nhất).\n",
+    "- Những gì nằm giữa **Q1** và **Q3** là **phần giữa của dữ liệu**. Chúng ta coi đây là \"bình thường\".\n",
+    "\n",
+    "#### Tại sao **± 1.5**?\n",
+    "\n",
+    "1. **1.5 lần IQR** giúp chúng ta mở rộng phạm vi thêm một chút nữa ở cả hai đầu (phía thấp và phía cao).\n",
+    "2. Nếu **điểm số** của một bạn nằm ngoài phạm vi này (quá xa so với các bạn khác), thì bạn đó **thực sự lạc loài**.\n",
+    "\n",
+    "**Ví dụ dễ hiểu:**\n",
+    "\n",
+    "- Hãy tưởng tượng bạn có một nhóm bạn đang chạy đua. Nếu tốc độ trung bình của mọi người là 8-10 km/h, nhưng có một bạn chạy nhanh đến **20 km/h** hoặc chậm chỉ **5 km/h**, thì bạn đó **quá khác biệt**.\n",
+    "- Sử dụng **± 1.5 IQR** như việc đặt ra một giới hạn hợp lý để quyết định ai là người quá nhanh hay quá chậm so với nhóm.\n",
+    "\n",
+    "3. **Tại sao không dùng ±1 hay ±2?**\n",
+    "   - **±1** thì sẽ bỏ sót nhiều người \"khác biệt\".\n",
+    "   - **±2** thì có thể quá rộng, dẫn đến bỏ qua một số bạn \"rất khác biệt\".\n",
+    "   - **±1.5** là con số vừa đủ \"hợp lý\" để phát hiện những trường hợp \"quá lạc loài\" mà không quá khắt khe.\n",
+    "\n",
+    "Vậy nên **±1.5 IQR** là cách mà chúng ta xác định ai là **outlier** mà vẫn đảm bảo không quá khắt khe hay quá dễ dãi.\n",
+    "\n",
+    "--- \n",
+    "\n",
+    "Tóm lại: \n",
+    "\n",
+    "- Dùng **± 1.5 IQR** giống như bạn đặt ra **ranh giới an toàn** để phát hiện ai trong nhóm **quá khác biệt** mà vẫn giữ cho mọi thứ hợp lý!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
