update tại sao có LENGTH = -1

--- a/spMiniProj_pwStrengthClassifi_Hoa/main.ipynb
+++ b/spMiniProj_pwStrengthClassifi_Hoa/main.ipynb
@@ -215,6 +215,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Trường hợp mật khẩu rỗng (dòng bắt đầu với dấu phẩy và strength=-1):**\n",
+    "- Xuất hiện \"-1\" vì trong code của bạn có dòng:\n",
+    "```python\n",
+    "result_df['strength'] = result_df['strength'].fillna(-1).astype(int)\n",
+    "```\n",
+    "- Điều này có nghĩa là khi không có giá trị strength (NaN), nó sẽ được thay thế bằng -1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 2. Data Processing"
    ]
   },
